# overrides

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  Justfile  README.md  apko-wolfi.yaml  apko.yaml  melange-wolfi.yaml  melange.yaml  rustfmt.toml
deploy/: override-operator.yaml
src/: lib.rs  main.rs
